	- nested object arrays in the form `[{ name: String, path: String }]`
	- linked schemas in the form `name:@User, address:@Address`
- added `CALL().language(value)` method
- added `$.repo {Object}` into the `SchemaOptions`
- added support for promises into the `CLEANUP()`
- extended `schema.action()` by adding new options:
	- `user: true/false`
	- `permissions: 'read,write,admin'`

========================
0.0.73
========================

- PREF configuration is saved nicely
- fixed scalar opertaion for NoSQL QueryBuilder
- fixed validating data according to the JSON schema

========================
0.0.72
========================

- added support for WebSocket for the Total.js Proxy
- added `/templates/` directory for the templates
- updated `TEMPLATE()` functionality
	- `filename` is targeted to the `/templates/` directory
	- `~filename` is will be used as an absolute filename
	- `http:// or https://` will download template from the URL address
	- local templates are not cached in the DEBUG mode
- updated `HTMLMAIL()`, `<body` element is with the normalized CSS
- fixed using `port` in the `PROXY()` method
- fixed closing of request/response when redirecting in the `REQUEST()` method
- fixed HTML parser by adding fallback for the non-exists end tag
- fixed `debug` mode for `.html` plugins/extensions/components
- extended `Icon` schema type by adding support for Total.js Icons
- fixed applying of `controller.status` for `controller.invalid()` method
- fixed parsing data in the promise in the `TotalAPI()` method
- fixed error handling in the `QueryBuilder`
- added `COMPONENTATOR(name, components)` method for downloading of UI components
- fixed returning object instance in the `ROUTE()` method
- added `publish:Boolean/String` property into the `schema.action()`
- added `$.publish(value)` property into the `SchemaOptions`
- improved `String.toJSONSchema()`
- improved HttpFile.move between volumes
- updated svg check

========================
0.0.71